How_to updated